# flight_finder_and_trip_planner_crewai

./: .env  README.md  pyproject.toml  trip_itinerary.md  trip_itinerary1.md
src/flight_finder_and_trip_planner_crewai/config/: agents.yaml  tasks.yaml
src/flight_finder_and_trip_planner_crewai/tools/: google_flights.py
